# rcronym

./: Cargo.toml  README.md  README.tpl
migrations/2018-02-27-003916_create_acronyms/: down.sql  up.sql
migrations/2018-02-28-233756_create_occurances/: down.sql  up.sql
migrations/2018-02-28-233756_create_occurrences/: down.sql  up.sql
src/: cli.rs  main.rs  models.rs  schema.rs
