[package]
name = "rcronym"
version = "0.1.0"
description = "Reddit acronym expander bot"
authors = ["Tim Brooks <brooks@skoorb.net>"]
license = "AGPL-3.0"
keywords = ["reddit", "bot", "acronym"]
repository = "https://github.com/brookst/rcronym.git"
readme = "README.md"

[dependencies]
orca = "0.5.0"
diesel = {version = "1.1.0", features = ['postgres']}
dotenv = "0.9.0"
regex = "0.2.6"
structopt = "0.2.4"
structopt-derive = "0.2.4"
